Added torch data leakage test

--- a/examples/data_leakage_tensorflow.ipynb
+++ b/examples/data_leakage_tensorflow.ipynb
@@ -40,8 +40,8 @@
      "text": [
       "False\n",
       "True\n",
-      "tf.Tensor([0.25569177 0.47592628], shape=(2,), dtype=float32)\n",
-      "tf.Tensor([0.08520758 0.40951586], shape=(2,), dtype=float32)\n"
+      "tf.Tensor([0.5612968  0.48197746], shape=(2,), dtype=float32)\n",
+      "tf.Tensor([0.98586655 0.10069025], shape=(2,), dtype=float32)\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,14 +109,14 @@
      "output_type": "stream",
      "text": [
       "Train size:  96\n",
-      "Validation size:  18\n",
-      "Test size:  6\n",
+      "Validation size:  16\n",
+      "Test size:  8\n",
       "(<tf.Tensor: shape=(2, 2, 1), dtype=float64, numpy=\n",
-      "array([[[0.38485315],\n",
-      "        [0.71238635]],\n",
+      "array([[[0.95652186],\n",
+      "        [0.48453802]],\n",
       "\n",
-      "       [[0.67686877],\n",
-      "        [0.82733236]]])>, <tf.Tensor: shape=(4,), dtype=float64, numpy=array([0.62485962, 0.34411641, 0.74024608, 0.67839805])>)\n"
+      "       [[0.59427153],\n",
+      "        [0.06836859]]])>, <tf.Tensor: shape=(4,), dtype=float64, numpy=array([0.28196447, 0.10134534, 0.30883358, 0.37356605])>)\n"
      ]
     }
    ],
@@ -128,8 +128,8 @@
     "inputs = np.random.rand(length, 2, 2, 1)  # 100 images of size 32x32x3\n",
     "labels = np.random.rand(length, 4)  # 100 labels (for a 10-class classification)\n",
     "\n",
-    "splitter_func = dtools.tf_make_datasets_from_tensor_slices\n",
-    "# splitter_func = dtools.tf_make_datasets_from_sklearn_arrays\n",
+    "# splitter_func = dtools.tf_make_datasets_from_tensor_slices\n",
+    "splitter_func = dtools.tf_make_datasets_from_sklearn_arrays\n",
     "\n",
     "train_dataset, val_dataset, test_dataset = splitter_func(\n",
     "    inputs=inputs,\n",
@@ -138,7 +138,7 @@
     "    val_ratio=0.15,\n",
     "    seed=42,\n",
     "    batch_size=None,\n",
-    "    avoid_leakage=False,\n",
+    "    # avoid_leakage=False,\n",
     ")\n",
     "\n",
     "print(\n",
@@ -148,17 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data leakage detected between train and val: 14 common elements found.\n",
-      "Data leakage detected between train and test: 5 common elements found.\n",
-      "Data leakage detected between val and test: 3 common elements found.\n",
-      "True\n"
+      "No data leakage detected between train and val.\n",
+      "No data leakage detected between train and test.\n",
+      "No data leakage detected between val and test.\n",
+      "False\n"
      ]
     }
    ],
